fix header width on mobile

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,7 +1,7 @@
 .header {
   background-image: url(../images/header.png);
   background-size: cover;
-  background-position: right;
+  background-position: 85%;
 
   @include on-tablet {
     background-position: center;
